samples/_failures_safe/1761405942_d526fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d897a34.c: In function ‘main’:
./samples/SAFE/__tmp_3d897a34.c:124:12: error: missing terminating " character
  124 |     printf("Enter log entries (format: Y
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3d897a34.c:124:5: error: expected expression at end of input
  124 |     printf("Enter log entries (format: Y
      |     ^~~~~~
./samples/SAFE/__tmp_3d897a34.c:124:5: error: expected declaration or statement at end of input
